--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .result-field {
   font-style: italic;
   font-weight: 800;
-  font-size: 60px;
+  font-size: 80px;
   line-height: 1.2;
   padding-right: 200px;
 }
@@ -53,11 +53,11 @@ label {
 }
 
 input[type="text"] {
-  font-size: 24px;
+  font-size: 34px;
   font-weight: 700;
   margin: 4px 0;
   padding: 6px 12px;
-  width: 80px;
+  width: 100px;
   margin-right: 20px;
   border: 1px solid rgb(200, 199, 199);
   border-radius: 4px;
@@ -72,7 +72,7 @@ input[type="text"]:focus {
   width: 35px;
   filter: white;
   padding: 20px;
-  background-color: hsl(228, 45%, 44%);
+  background-color: hsl(264, 86%, 57%);
   border-radius: 50%;
   position: absolute;
   top: -40px;
@@ -82,6 +82,11 @@ input[type="text"]:focus {
 .section-separation {
   margin-top: 20px;
   position: relative;
+}
+
+hr {
+  margin: 0;
+  background-color:rgb(255, 255, 255);
 }
 
 .arrow-icon:hover {
@@ -97,17 +102,17 @@ label.uppercase {
 }
 
 .error-message {
-  color: red;
+  color: rgb(207, 0, 0);
   font-size: 10px;
   margin: 0;
 }
 
 input.red {
-  border: 1px solid red;
+  border: 1px solid rgb(207, 0, 0);
 }
 
 label.red {
-  color: red;
+  color: rgb(207, 0, 0);
 }
 
 button {
@@ -120,18 +125,45 @@ button {
 }
 
 .age-display {
-  color: hsl(228, 45%, 44%);
+  color: hsl(264, 86%, 57%);
   display: inline;
+}
+
+@media only screen and (max-width: 800px) {
+  .wrapper {
+    width: 80vw;
+    padding: 60px 25px;
+  }
+
+  /* .flex-container {
+    margin-bottom: 80px;
+  } */
+
+  /* .arrow-icon {
+    top: 50%;
+    top: 0px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  } */
+
+  .result-field {
+    font-size: 65px;
+    padding-right: 0;
+  }
+
+  input[type="text"] {
+    font-size: 26px;
+    margin: 2px 0;
+    padding: 6px 12px;
+    width: 80px;
+    margin-right: 10px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
   .wrapper {
     width: 80vw;
     padding: 60px 25px;
-  }
-
-  hr {
-    margin: 0;
   }
 
   .section-separation {
@@ -150,6 +182,7 @@ button {
   }
 
   .result-field {
+    font-size: 55px;
     padding-right: 0;
   }
 
@@ -157,10 +190,8 @@ button {
     font-size: 20px;
     font-weight: 700;
     margin: 2px 0;
-    padding: 6px 12px;
+    padding: 10px 14px;
     width: 60px;
-    margin-right: 10px;
-    border: 1px solid rgb(200, 199, 199);
-    border-radius: 4px;
+    margin-right: 16px;
   }
 }
